# Thermal-EX

./: .gitignore  Arknights.cpp  Arknights.h  CMakeLists.txt  LED.cpp  README.md  README_ZH.md  camera.cpp  helloworld.cpp  mult5.cpp  mult5.h  test_mult5.cpp
3Dprinting/Part1/: Base plate.SLDPRT  Base plate1.SLDPRT  Base plate2.SLDPRT  CAUTION.SLDPRT  Decoration of the front cover of the bracket 1.SLDPRT  Decoration of the front cover of the bracket 2.SLDPRT  Decorative cylinder.SLDPRT  Decorative square.SLDPRT  EX logo.SLDPRT  EX logo2.SLDPRT  Front cover of the bracket.SLDPRT  Front cover of the bracket1.SLDPRT  Front cover of the bracket2.SLDPRT  Front cover of the bracket3.SLDPRT  Front decoration of the vehicle.SLDPRT  Front decoration of the vehicle1.SLDPRT  Rhodes Island logo.SLDPRT  Rotating support.SLDPRT  Spherical shell rotation zone.SLDPRT  Spherical shell01.SLDPRT  Spherical shell02.SLDPRT  Spherical shell03.SLDPRT  Spherical shell04.SLDPRT  Steering gear support.SLDPRT  Support column.SLDPRT  big LED.SLDPRT  front toward enemy.SLDPRT  phone stand.SLDPRT  phone stand2.SLDPRT  phone stand3.SLDPRT
3Dprinting/Part2/: Antenna.SLDPRT  Antenna.STL  Base plate.SLDPRT  Base plate1.4.SLDPRT  Bottom shell1.4.STL  Part 6 bottom shell front cover.SLDPRT  Part 7 Decorative Armor.SLDPRT  Part 7 Decorative Armor.STL  Part 8 Barrel (Small).SLDPRT  Part 8 Barrel (Small).STL  The bottom shell of assembly 4 is integral.SLDASM  Upper cover.SLDPRT  Wheel axle.SLDPRT
light/: CMakeLists.txt  light.cpp
src/: Config.h  HCSR04.cpp  HCSR04_Printer.cpp  Thermal-EX.cpp  light.cpp  main.cpp  printLogo.cpp  ultrasonic.cpp
src/Arknights/: Arknights.cpp  Arknights.h  config.h  config.h.in
src/AudioPlayer/: AudioPlayer.cpp  AudioPlayer.h
src/Keyboard/: KeyboardInputMonitor.cpp  KeyboardInputMonitor.h
src/LED/: LEDController.cpp  LEDController.h
src/SG90/: SG90Controller.cpp  SG90Controller.h  rpi_pwm.h
src/Ultrasonic/: HCSR04.cpp  HCSR04.h  TimeUtils.cpp  TimeUtils.h  hcsr04.cpp  hcsr04.h  ultrasonic.cpp  ultrasonic.h  ultrasonicCalculator.h  ultrasonicDataTypes.h
src/UltrasonicCallback/: DataLogger.cpp  DataLogger.h  HCSR04.cpp
temp/light/: CMakeLists.txt  light.cpp
tests/: Audio_greeting.cpp  CMakeLists.txt  DistanceWaring.cpp  DistanceWaringSimple.cpp  HCSR04_Printer.cpp  LED_light.cpp  LOGO.cpp  README.md  README_ZH.md  SG90_move.cpp
